fix app sizing on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,4 +3,9 @@
 html, body {
   font-family: $typeface-primary;
   background-color: $color-white;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
